--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -57,23 +57,28 @@
 	<script>
 		var ws = new WebSocket("wss://friendapp.tech/ws");
 		ws.addEventListener("open", (e) => {
-			socket.send("\x00" + document.cookie.substring(6));
-			console.log("found partner")
+			console.log("connected")
+			if (ws.readyState === 1) {
+				ws.send("\x00" + document.cookie.substring(6));
+				console.log("trying to find partner")
+			}
 		});
 		ws.addEventListener("message", (e) => {
 			if (e.data[0] == "\x00") {
+				console.log("found partner")
 				// connection is established with a peer
 				// e.data[1:] will be the username of the peer
-				
+				alert("You are now connected to " + e.data.substring(1));
 			} else if (e.data == "\x01") {
 				ws.send("\x01");
 			} else {
 				// a message is recieved from the peer
 				// e.data will be the contents of the message 
+				alert(e.data);
 			}
 		});
 		// when you need to send a message
-		ws.send("message");
+		//ws.send("message");
 	</script>
 </body>
 </html>
