--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -55,7 +55,8 @@
 		</div>
 	</div>
 	<script>
-		var ws = new WebSocket("wss://friendapp.tech/ws");
+		const ws = new WebSocket("wss://friendapp.tech/ws");
+		const searchPlaceHold = document.getElementById("errorPlaceholder");
 		ws.addEventListener("open", (e) => {
 			console.log("connected")
 			if (ws.readyState === 1) {
@@ -69,6 +70,7 @@
 				// connection is established with a peer
 				// e.data[1:] will be the username of the peer
 				alert("You are now connected to " + e.data.substring(1));
+
 			} else if (e.data == "\x01") {
 				ws.send("\x01");
 			} else {
