--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -43,11 +43,17 @@
 		</div>
 		</div>
 		<div id="chatbox">
+			<div id="usernamething">
+				<h3 id="peername"></h3>
+			</div>
 			<div id="chathistory">
 				Hooking you up with someone to talk to! <!-- this should only show while no messages exist -->
 				<!-- show loading circle -->
 				<img src="/res/loading.gif" />
 			</div>
+			<div id="chat">
+				
+			</div> 
 			<div id="messagebox">
 				<input type="text" id="message" name="message" required minlength="1" maxlength="32" size="48" placeholder="Message" autocomplete="off"/>
 				<input type="image" src="/res/send.png" width=32 height=32 style="position: relative; top: -1.5rem; left: 13rem;" autocomplete="off"/>
@@ -56,26 +62,30 @@
 	</div>
 	<script>
 		const ws = new WebSocket("wss://friendapp.tech/ws");
-		const searchPlaceHold = document.getElementById("errorPlaceholder");
+		let searchPlaceHold = document.getElementById("chathistory");
+		let name = document.getElementById("peername");
 		ws.addEventListener("open", (e) => {
-			console.log("connected")
-			if (ws.readyState === 1) {
-				ws.send("\x00" + document.cookie.substring(6));
-				console.log("trying to find partner")
-			}
+			console.log("connected");
+			ws.send("\x00" + document.cookie.substring(6));
+			console.log("trying to find partner");
 		});
 		ws.addEventListener("message", (e) => {
+			console.log(e.data[0] == "\x00");
+			console.log(e.data[0] == 0);
 			if (e.data[0] == "\x00") {
-				console.log("found partner")
+				console.log("found partner");
+				searchPlaceHold.innerHTML = null;
+				name.innerHTML = e.data[1];
 				// connection is established with a peer
 				// e.data[1:] will be the username of the peer
-				alert("You are now connected to " + e.data.substring(1));
+				//document.getElementById("username").innerHTML = e.data.substring(1);
 
 			} else if (e.data == "\x01") {
 				ws.send("\x01");
 			} else {
 				// a message is recieved from the peer
 				// e.data will be the contents of the message 
+				
 				alert(e.data);
 			}
 		});
