i just spelled commit as ommit 3 times

--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -49,9 +49,8 @@
 			<div id="chathistory">
 				<!-- Hooking you up with someone to talk to!
 				<img src="/res/loading.gif" /> -->
-				<div id="chat">
-					<h3 id="sent">sajkdwas</h3>
-					<h3 id="sent">sadwas</h3>
+				<div id="sent">
+					<h3>sajkdwas</h3>
 				</div> 
 			</div>
 			
