--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -44,13 +44,13 @@
 		</div>
 		<div id="chatbox">
 			<div id="usernamething">
-				<h3 id="peername">asdw</h3>
+				<h3 id="peername"></h3> <!-- Moment -->
 			</div>
 			<div id="chathistory">
 				<!-- Hooking you up with someone to talk to!
 				<img src="/res/loading.gif" /> -->
 				<div id="sent">
-					<h3>sajkdwas</h3>
+					<h3></h3> <!-- ? -->
 				</div> 
 			</div>
 			
