--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -49,6 +49,7 @@
 			<div id="chathistory">
 				Hooking you up with someone to talk to!
 				<img id="loading" src="/res/loading.gif" />
+				<div id="sent"></div>
 			</div>
 			
 			<div id="messagebox">
@@ -109,10 +110,10 @@
 		function sendMsg() {
 			const newMsg = document.createElement("h3");
 			const node = document.createTextNode(document.getElementById("message").value);
-			newMsg.appendChild(node)
+			newMsg.appendChild(node);
 
-			sent.appendChild(node)
-			sent.appendChild(document.createElement("br"))
+			sent.appendChild(node);
+			sent.appendChild(document.createElement("br"));
 
 			let chathistory = document.getElementById("chathistory");
 			chathistory.innerHTML = sent;
