--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -53,7 +53,7 @@
 			</div>
 			
 			<div id="messagebox">
-				<input type="text" id="message" name="message" required minlength="1" maxlength="2048" size="48" placeholder="Message" autocomplete="off"/>
+				<input type="text" id="message" name="message" disabled="true" required minlength="1" maxlength="2048" size="48" placeholder="Message" autocomplete="off"/>
 				<input type="image" id="send" src="/res/send.png" width=32 height=32 style="position: relative; top: -1.5rem; left: 13rem;" autocomplete="off" onclick="sendMsg()"/>
 			</div>
 		</div>
@@ -74,6 +74,7 @@
 				console.log("found partner");
 				searchPlaceHold.innerHTML = "";
 				loadingImg = null;
+				document.getElementById("message").disabled = false;
 				name.innerHTML = e.data.substring(1);
 			} else if (e.data == "\x01") {
 				ws.send("\x01");
