--- a/public/html/chat.html
+++ b/public/html/chat.html
@@ -54,7 +54,7 @@
 			
 			<div id="messagebox">
 				<input type="text" id="message" name="message" disabled="true" required minlength="1" maxlength="2048" size="48" placeholder="Message" autocomplete="off"/>
-				<input type="image" id="send" src="/res/send.png" width=32 height=32 style="position: relative; top: -1.5rem; left: 13rem;" autocomplete="off" onclick="sendMsg()"/>
+				<input type="image" id="send" src="/res/send.png" disabled="true" width=32 height=32 style="position: relative; top: -1.5rem; left: 13rem;" autocomplete="off" onclick="sendMsg()"/>
 			</div>
 		</div>
 	</div>
@@ -75,6 +75,7 @@
 				searchPlaceHold.innerHTML = "";
 				loadingImg = null;
 				document.getElementById("message").disabled = false;
+				document.getElementById("send").disabled = false;
 				name.innerHTML = e.data.substring(1);
 			} else if (e.data == "\x01") {
 				ws.send("\x01");
